<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="StartingPage">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="390dp"
        android:layout_height="226dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/todo" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="389dp"
        android:layout_height="370dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="0.33"
        tools:layout_editor_absoluteX="4dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/SinglePlayer"
            android:layout_width="241dp"
            android:layout_height="104dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"
            android:layout_marginEnd="72dp"
            android:layout_marginRight="73dp"
            android:background="@drawable/rounded_button"
            android:text="@string/single_player"
            android:textSize="24sp" />

        <Button
            android:id="@+id/MultiPlayer"
            android:layout_width="241dp"
            android:layout_height="104dp"
            android:layout_below="@+id/SinglePlayer"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="72dp"
            android:layout_marginRight="72dp"
            android:background="@drawable/rounded_button"
            android:text="@string/multiplayer"
            android:textSize="24sp" />

        <Button
            android:id="@+id/Tutorial"
            android:layout_width="241dp"
            android:layout_height="104dp"
            android:layout_below="@+id/MultiPlayer"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="72dp"
            android:layout_marginRight="74dp"
            android:background="@drawable/rounded_button"
            android:text="@string/tutorial"
            android:textSize="24sp">

        </Button>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powered_by_aog"
        android:textColor="@color/yellow"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.979" />


</androidx.constraintlayout.widget.ConstraintLayout>